# flashSpeculation

./: .gitignore  README.md  pyproject.toml
experiments/: aggregate_bench.py  aggregate_math500.py  diagnostic.py  dilution_probe.py  guided_power_bench.py  guided_power_math500.py  layer_probe.py  probe.py  speculative_mcmc_probe.py  test_negative_beta.py
paper/: main.tex  math_commands.tex  reference.bib
record/: generate_figures.py  phase0_diagnostic_report.md
record/guided_power_sampling/: guided_power_sampling_report.md
record/guided_power_sampling/scripts/: generate_math500_figures.py
record/phase0_diagnostic/: phase0_diagnostic_report.md
record/phase0_diagnostic/scripts/: generate_figures.py
record/speculative_mcmc_probe/: speculative_mcmc_probe_report.md
ref/CL-bench/: .gitignore  CNAME  LICENSE  README.md  eval.py  infer.py
ref/CL-bench/docs/: index.html
ref/SC-MCTS/: setup.py
ref/SC-MCTS/paper/: iclr2025_conference.bbl  iclr2025_conference.bib  iclr2025_conference.sty  iclr2025_conference.tex
ref/SC-MCTS/reasoners/: __init__.py  base.py  blocksworld.py  bw_utils.py  exllamav2_model.py  mcts.py  search_config.py  (+1 more)
ref/TMPC/: 00README.json  1-intro.tex  2-prelim.tex  2-related.tex  3-method-new.tex  4-exp.tex  appendix.tex  iclr2026_conference.sty  main.bbl  main.bib  main.tex
ref/dflash/: macros.tex  main.tex  packages.tex  reference.bib
ref/generative_latent_prior/: glp_demo.ipynb  glp_save.py  glp_train.py
ref/qTTT/: 00README.json  fairmeta.cls  math_commands.tex  paper.bib  paper.tex
ref/reasoning-with-sampling/: toy_composition.py
ref/review/: LLM Inference Methods Literature Survey.txt  Survey of LLM Test-Time Training.txt  Test-Time Adaptation for Draft Models.txt  Transformer Layer Interpolation and Extrapolation.txt
scripts/: benchmark.py  benchmark_sglang.py  diagnostic.py  dilution_probe.sh  phase1_all.sh  phase1_benchmarks.sh  phase1_beta_sweep.sh  phase1_model_scaling.sh  phase1_probe.sh  run_benchmark.sh  run_draft_blend.sh  run_math500.sh  run_phase1.sh  run_phase2.sh  setup_phase0.sh
src/dg_ttt/: __init__.py  data.py  distributed.py
(+121 files in other folders)
